# podcast-plugin

./: .crails  .gitignore  CMakeLists.txt  package.json  podcast.description.json  podcast.en.json  podcast.es.json  podcast.fr.json  prebuild.sh  webpack.config.js
app/: database.cpp  main.cpp  renderers.cpp  routes.cpp  sitemap.hpp
app/assets/javascripts/: application.js  audioPlayer.js
app/assets/stylesheets/: _audio_player.scss  application.scss
app/controllers/: podcast.hpp
app/controllers/admin/: podcast.hpp
app/models/: podcast.cpp  podcast.hpp  podcast_index_query.hpp  podcast_tag_query.hpp  podcast_traits.hpp
app/views/admin/podcast/: _form.html  _list.html  index.html  show.html
app/views/podcast/: _audio_player.html  index.html  index.rss  show.html
